# prbr25-startgg-queries

./: .gitignore  Dockerfile  README.md  pyproject.toml
src/prbr25_startgg_queries/: entrypoint.py  get_events.py
src/prbr25_startgg_queries/bd/: postgres.py
src/prbr25_startgg_queries/common/: config.py  list_utils.py  logger.py
src/prbr25_startgg_queries/extract/: fetch_matches.py  graphql.py  load_entrants_from_event.py  refresh_raw.py  standings.py  tournament_from_url.py  utils.py
src/prbr25_startgg_queries/load/: postgres.py  utils.py
src/prbr25_startgg_queries/queries/: entrants.graphql  events.graphql  find_tournament.graphql  matches.graphql  sql_queries.py  standings.graphql
src/prbr25_startgg_queries/transform/: clean_entrants.py  clean_events.py  clean_matches.py  extract_event_phases.py  extract_standings.py  utils.py
