[project]
name = "startgg-queries"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Medeiros",email = "gabrielspmedeiros@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
mypy = "^1.17.1"
pre-commit = "^4.3.0"

