[tool.poetry]
name = "startgg-queries"
version = "1.3.0"
description = ""
authors = []
readme = "README.md"
packages = [{ include = "prbr25_startgg_queries", from = "src" }]
include = ["src/startgg/queries/*.graphql"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
dotenv = "^0.9.9"
requests = "^2.32.5"
gql = { extras = ["all"], version = "^4.0.0" }
pandas = "^2.3.2"
sqlalchemy = "^2.0.43"
psycopg2-binary = "^2.9.10"
prbr-rds-client = { git = "https://github.com/GabrielSPMed/prbr-rds-client.git" }
prbr25-logger = { git = "https://github.com/GabrielSPMed/prbr25-logger" }

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
mypy = "^1.17.1"
pre-commit = "^4.3.0"
